fix margin issue that causes the dontate box to be too big

--- a/site/style.css
+++ b/site/style.css
@@ -243,7 +243,7 @@ ul.no-padding{
   margin-bottom: 0;
 }
 
-.callout:last-child{
+.callout--vertical.callout:last-child{
   margin-bottom: 0;
 }
 
